8179084: HotSpot VM fails to start when AggressiveHeap is set

Reviewed-by: kbarrett, stefank